# HyperFT

./: README.md  README_zh.md
Prj-Android/: build.gradle  local.properties
Prj-Android/app/: build.gradle
Prj-Android/app/src/androidTest/java/face/zeusees/zeuseesfacetracking/: ExampleInstrumentedTest.java
Prj-Android/app/src/main/: AndroidManifest.xml
Prj-Android/app/src/main/cpp/: CMakeLists.txt  LandmarkTracking.h  mtcnn.cpp  mtcnn.h  tracking-lib.cpp
Prj-Android/app/src/main/java/com/hyq/hm/landmarksticker/: CameraOverlap.java  EGLUtils.java  FixedAspectRatioRelativeLayout.java  GLBitmap.java  GLFrame.java  GLFramebuffer.java  GLPoints.java  MainActivity.java  ShaderUtils.java  StartActivity.java
Prj-Android/app/src/main/java/com/sample/tracking/: CameraOverlapFragment.java  FaceOverlapFragment.java  FaceTrackerActivity.java
Prj-Android/app/src/main/java/com/zeusee_soft/zmobileapi/: AuthCallback.java  STUtils.java
Prj-Android/app/src/main/java/trackingsoft/tracking/: Face.java  FaceTracking.java  Utils.java
Prj-Android/app/src/main/res/anim/: push_bottom_in.xml  push_buttom_out.xml
Prj-Android/app/src/main/res/layout/: activity_main.xml  activity_start.xml
Prj-Android/app/src/main/res/values/: strings.xml  styles.xml
Prj-Android/gradle/wrapper/: gradle-wrapper.properties
Prj-Linux/: CMakeLists.txt  LandmarkTracking.h  README.md  colotracker.cpp  colotracker.h  main.cpp  mtcnn.cpp  mtcnn.h
Prj-Win/: .gitignore  LandmarkTracking.h  Ncnn_FaceTrack.sln  Ncnn_FaceTrack.vcxproj  Ncnn_FaceTrack.vcxproj.filters  README.md  main.cpp  mtcnn.cpp  mtcnn.h
Prj-Win/3rd/ncnn/lib/: ncnn.lib
Prj-Win/3rd/opencv/lib/: opencv_world411.lib
